--- a/take_home_ex2/take_home_ex2.qmd
+++ b/take_home_ex2/take_home_ex2.qmd
@@ -18,7 +18,7 @@ In this study, I will continue my geospatial analytics learning journey to demon
 The code chunk below installs and loads the various packages
 
 ```{r}
-pacman::p_load(tmap, sf, DT, stplanr,
+pacman::p_load(tmap, sf, DT, stplanr, sp,
                performance,
                ggpubr, tidyverse)
 ```
@@ -48,7 +48,7 @@ odbus$ORIGIN_PT_CODE <- as.factor(odbus$ORIGIN_PT_CODE)
 odbus$DESTINATION_PT_CODE <- as.factor(odbus$DESTINATION_PT_CODE) 
 ```
 
-For the purpose of this exercise, we will extract commuting flows on weekday and between 6 and 9 o'clock.
+For the purpose of this exercise, we will extract commuting flows on weekday and between 6 and 9 o'clock. This will mainly be people going to school or work.
 
 ```{r}
 odbus6_9 <- odbus %>%
@@ -298,6 +298,8 @@ tm_shape() +
            alpha = 0.3)
 ```
 
+For passengers volume greater or equal to 5000, we can observe from the map above that between Woodlands and area such as Tuas, Jurong, Woodlands and Tampines areas. There are also small pockets of areas in the central of Singapore.
+
 ## 5.5 Morning Peak (Greater than or equal to 10000)
 
 ```{r}
@@ -316,6 +318,8 @@ tm_shape() +
            alpha = 0.3)
 ```
 
+For passenger volumes greater than 10,000, we observe in areas between Woodlands and Tuas, and also Woodlands and Tampines.
+
 ## 5.6 Morning Peak (Greater than or equal to 50000)
 
 ```{r}
@@ -332,4 +336,121 @@ tm_shape() +
            scale = c(0.1, 1, 3, 5, 7, 10),
            n = 6,
            alpha = 0.3)
+```
+
+For passengers volume equal or greater than 50,000, it is concentrated in Woodlands region.
+
+# 6. Assemble propulsive and attractiveness variables 
+
+## 6.1 Geospatial
+
+For geospatial, I will be using the following:
+
+1.  *Business*
+
+```{r}
+business <- st_read(dsn = "data/geospatial",
+                   layer = "Business") %>%
+  st_transform(crs = 3414)
+```
+
+```{r}
+tmap_mode("plot")
+tm_shape(mpsz) +
+  tm_polygons() +
+tm_shape(business) +
+  tm_dots() 
+```
+
+2.  *FinServ*
+
+```{r}
+finserv <- st_read(dsn = "data/geospatial",
+                   layer = "FinServ") %>%
+  st_transform(crs = 3414)
+```
+
+```{r}
+tmap_mode("plot")
+tm_shape(mpsz) +
+  tm_polygons() +
+tm_shape(finserv) +
+  tm_dots() 
+```
+
+3.  Train Station Exit Layer
+
+```{r}
+train <- st_read(dsn = "data/geospatial",
+                   layer = "Train_Station_Exit_Layer") %>%
+  st_transform(crs = 3414)
+```
+
+```{r}
+tmap_mode("plot")
+tm_shape(mpsz) +
+  tm_polygons() +
+tm_shape(train) +
+  tm_dots() 
+```
+
+4.  Rapid Transit System Station
+
+```{r}
+mrt <- st_read(dsn = "data/geospatial",
+                   layer = "RapidTransitSystemStation") %>%
+  st_transform(crs = 3414)
+```
+
+```{r}
+tmap_mode("plot")
+tmap_options(check.and.fix = TRUE)
+tm_shape(mpsz) +
+  tm_polygons() +
+tm_shape(train) +
+  tm_dots() 
+```
+
+## 6.2 Aspatial
+
+For aspatial, I will be using the following:
+
+1.  HDB
+
+```{r}
+data <- read.csv("data/aspatial/hdb.csv")
+```
+
+```{r}
+coordinates <- data[, c("lng", "lat")]  
+spatial_points <- SpatialPointsDataFrame(coordinates, data)
+```
+
+```{r}
+tmap_mode("plot")
+tm_shape(mpsz) +
+  tm_polygons() +
+tm_shape(spatial_points) +
+  tm_dots()
+```
+
+# 7 **Computing Distance Matrix**
+
+## 7.1 **Converting from sf data.table to SpatialPolygonsDataFrame**
+
+First [`as.Spatial()`](https://r-spatial.github.io/sf/reference/coerce-methods.html) will be used to convert *mpsz* from sf tibble data frame to SpatialPolygonsDataFrame of sp object as shown in the code chunk below
+
+```{r}
+hexagon_busstop_sp <- as(hexagon_busstop, "Spatial")
+hexagon_busstop_sp
+```
+
+## 7.2 **Computing the distance matrix**
+
+Next, [`spDists()`](https://www.rdocumentation.org/packages/sp/versions/2.1-1/topics/spDistsN1) of sp package will be used to compute the Euclidean distance between the centroids of the hexagon layer.
+
+```{r}
+dist <- spDists(hexagon_busstop_sp, 
+                longlat = FALSE)
+head(dist, n=c(10, 10))
 ```
